# ArxivExplorer

./: Dockerfile  Dockerfile.e2e.process  Dockerfile.mongo  Dockerfile.process  LICENSE.txt  Makefile  README.md  docker-compose.process.yaml  docker-compose.yaml  ec2_setup.sh  embed_data.py  init_mongo.sh  pyproject.toml  retrieval.py
.github/workflows/: e2e_tests_process.yaml  process.yaml  unit_tests.yaml
api/: api.py
arxiv_explorer/: download_kaggle_data.py  logging_utils.py  mongo_utils.py  process.py  retrieve.py
tests/e2e/: e2e.py  test_e2e_process.py
tests/e2e/data/: arxiv-metadata-oai-sample.json
tests/unit/: test_process.py  test_retrieve.py
tests/unit/data/: paper_data.json
